

public class AnimeCnst
{
    public const string isShooting = "isShooting";
    public const string isClimbing = "isClimbing";
    public const string isDead = "isDead";
    public const string isFallingEnded = "isFallingEnded";
    public const string isLedderFinished = "isLedderFinished";
    public const string blend = "blend";
}
